<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.multi_mode.MultiModeWaitFragment">

    <TextView
        android:id="@+id/multi_room_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/pretendardregular"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:text="경기 시간"
        android:textAppearance="@style/multi_room_wait_distance"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="@id/multi_room_wait_start_time"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/multi_room_wait_title"
        android:layout_width="256dp"
        android:layout_height="43dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/pretendardextrablod"
        android:gravity="center_vertical"
        android:lineSpacingExtra="-9sp"
        android:text="우리 함께 달려요!"
        android:textAppearance="@style/multi_room_wait_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/leaveButton"
        android:layout_width="140dp"
        android:layout_height="39dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/leave_button"
        android:fontFamily="@font/pretendardregular"
        android:gravity="center"
        android:text="떠나기"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/waiting_list_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintLeft_toRightOf="@id/time_remaining"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/multi_room_wait_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardextrablod"
        android:gravity="center_vertical"
        android:text="21:39"
        android:textAppearance="@style/multi_room_wait_start_time"
        android:textSize="35sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multi_room_wait_title" />

    <TextView
        android:id="@+id/startText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardthin"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:text="시작"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/multi_room_wait_start_time"
        app:layout_constraintLeft_toRightOf="@+id/multi_room_wait_start_time" />

    <TextView
        android:id="@+id/time_remaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/pretendardregular"
        android:text="잔여 시간"
        android:textAppearance="@style/multi_room_wait_remaining_time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multi_room_wait_start_time" />

    <ImageView
        android:id="@+id/usermark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/participant_count"
        app:layout_constraintRight_toLeftOf="@+id/participant_count"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/participant_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/pretendardregular"
        android:text="##/##"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toEndOf="@+id/usermark"
        app:layout_constraintTop_toBottomOf="@id/time_remaining" />

    <HorizontalScrollView
        android:id="@+id/waiting_list_box"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/multi_room_waiting_list_background"
        android:fillViewport="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/participant_count">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/linear_layout_odd"
                android:layout_width="wrap_content"
                android:layout_height="163dp"
                android:orientation="horizontal"
                android:padding="5dp">
                <!-- 홀수 아이템들이 여기에 추가됨 -->
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_even"
                android:layout_width="wrap_content"
                android:layout_height="163dp"
                android:layout_below="@+id/linear_layout_odd"
                android:orientation="horizontal"
                android:padding="5dp">
                <!-- 짝수 아이템들이 여기에 추가됨 -->
            </LinearLayout>
        </RelativeLayout>
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>