...
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendardregular"
        android:paddingTop="75dp"
        android:text="아이디"
        app:layout_constraintLeft_toLeftOf="@id/IdInput"
        app:layout_constraintTop_toBottomOf="@id/logoInLogIn" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/IdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:id="@+id/PasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/pretendardregular"
        android:text="비밀번호"
        app:layout_constraintBottom_toTopOf="@id/PasswordInput"
        app:layout_constraintLeft_toLeftOf="@id/PasswordInput" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/PasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
        android:paddingLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/IdInput" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/LoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/round_shape_green"
...
