...
                android:fontFamily="@font/pretendardregular"
                android:gravity="center_horizontal"
                android:text="남은 시간"
                android:textAppearance="@style/multi_room_play_goal" />

            <TextView
                android:id="@+id/remain_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/pretendardregular"
                android:gravity="center_horizontal"
                android:text="00:00:00"
                android:textAppearance="@style/multi_room_play_goal" />
        </LinearLayout>
    </LinearLayout>

    <fragment
        android:id="@+id/multi_mode_map"
...
            android:progressDrawable="@drawable/seekbar_progress"
            app:layout_constraintLeft_toRightOf="@id/bronze_medal"
            app:layout_constraintTop_toBottomOf="@id/third_runner_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/play_leaveButton"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/leave_button"
        android:fontFamily="@font/pretendardregular"
        android:gravity="center"
...
